# electric-text

./: .gitignore  CLAUDE.md  README.md  RULES.md  pyproject.toml
.cursor/rules/: base.mdc
core/: entities.py
electric_text/: __init__.py  __main__.py  entities.py
examples/: call_model.py  config.yaml
examples/prompt_configs/: poetry.json  prose_to_schema.json  structured_poem.json
examples/tool_configs/: get_current_weather.json  get_forecast.json  tool_boxes.json
models/: client.py  parse_partial_response.py  provider.py  stream_history.py  translator.py
models/providers/: ollama.py  openai.py
prompts/: prose-to-schema.txt
prompts/prose_to_schema/: schema_response.py
src/electric_text/: __init__.py  __main__.py
tests/: boundaries.py  fixtures.py  test_app.py  test_client.py  test_entities.py  test_ollama.py  test_streaming.py  test_translator.py
tests/app/: test_process_text.py
tests/capabilities/: test_constants.py  test_provider_capabilities.py  test_provider_capability.py
tests/cli/: test_parse_args.py  test_parse_provider_model.py
tests/clients/: test_client.py  test_convert_prompt_to_messages.py  test_parse_partial_response.py  test_translator.py
tests/configuration/: test_get_config_value.py  test_load_config.py  test_print_config.py
tests/electric_text/: test_entities.py
tests/logging/: test_configure_logging.py  test_get_logger.py
tests/models/: test_client.py  test_parse_partial_response.py  test_translator.py
tests/providers/: test_convert_prompt_to_messages.py  test_stream_history.py
tests/responses/: test_create_user_request.py  test_split_model_string.py
tests/shorthand/: test_build_user_shorthand_models.py
tests/system/: test_app.py  test_cli_integration.py  test_network_blocking.py  test_prompt_no_config.py  test_prompt_with_config.py  test_streaming.py  test_structured.py  test_structured_streaming.py  test_tools.py  test_tools_streaming.py
tests/tools/: test_load_tools.py
web/: app.py  domain.py  factory.py  routes.py
web/views/: nav.py  (+3 more)
(+346 files in other folders)
