[project]
name = "electric-text"
version = "0.1.0"
description = "This text is electric!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.6.2",
    "openai>=1.52.0",
    "pydantic>=2.9.2",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "python-multipart>=0.0.12",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
]
