[project]
name = "electric_text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "starlette>=0.46.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pydeps>=3.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.11.0",
    "ty>=0.0.1a1",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
extra_checks = true
follow_imports = "silent" # Change to"error"
ignore_missing_imports = false
implicit_reexport = false
namespace_packages = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "possibly-undefined",
    "redundant-self",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"] # Adds src to the python path for tests

[tool.pydeps]
exclude = ["electric_text.logging", "electric_text.web"]
